--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">Tasky</string>
-    <string name="NewCategory">New category</string>
+    <string name="EditCategories">Edit Categories</string>
     <string name="NewTask">New task</string>
     <string name="addNewTask">Add new task</string>
     <string name="newTaskTitle">Title:</string>
     <string name="newTaskCategory">Category:</string>
     <string name="newTaskPriority">Priority:</string>
     <string name="newTaskDescription">Description:</string>
+    <string name="newCategory">New Category</string>
+    <string name="newCategoryWarningLenth">Please enter at least 3 letters.</string>
+    <string name="newCategoryWarningExists">Please enter category that does not exist.</string>
 </resources>
